# ChangeLog for dev-python/lettuce
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Feb 2011; James Rowe <jnrowe@gmail.com> -lettuce-0.1.18.ebuild,
  lettuce-0.1.19.ebuild:
  Keyworded x86.

  21 Feb 2011; James Rowe <jnrowe@gmail.com> lettuce-0.1.19.ebuild:
  Keyworded amd64.

  09 Feb 2011; James Rowe <jnrowe@gmail.com> -lettuce-0.1.17.ebuild,
  lettuce-0.1.18.ebuild:
  Keyworded x86.

  09 Feb 2011; James Rowe <jnrowe@gmail.com> lettuce-0.1.18.ebuild:
  Keyworded amd64.

*lettuce-0.1.19 (22 Jan 2011)

  22 Jan 2011; James Rowe <jnrowe@gmail.com> +lettuce-0.1.19.ebuild:
  Version bump [265].

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

*lettuce-0.1.18 (10 Jan 2011)

  10 Jan 2011; James Rowe <jnrowe@gmail.com> +lettuce-0.1.18.ebuild:
  Version bump [247].

  09 Jan 2011; James Rowe <jnrowe@gmail.com> -lettuce-0.1.15.ebuild,
  lettuce-0.1.17.ebuild:
  Keyworded x86.

  08 Jan 2011; James Rowe <jnrowe@gmail.com> lettuce-0.1.17.ebuild:
  Keyworded amd64.

*lettuce-0.1.17 (02 Dec 2010)

  02 Dec 2010; James Rowe <jnrowe@gmail.com> +lettuce-0.1.17.ebuild:
  Version bump [236].

  02 Dec 2010; James Rowe <jnrowe@gmail.com> -lettuce-0.1.14.ebuild,
  lettuce-0.1.15.ebuild:
  Keyworded x86.

  01 Dec 2010; James Rowe <jnrowe@gmail.com> lettuce-0.1.15.ebuild:
  Keyworded amd64.

  07 Nov 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Updated URL for GitHub's recent switch to HTTPS everywhere.

*lettuce-0.1.15 (31 Oct 2010)

  31 Oct 2010; James Rowe <jnrowe@gmail.com> +lettuce-0.1.15.ebuild:
  Version bump [210].

  15 Oct 2010; James Rowe <jnrowe@gmail.com> -lettuce-0.1.13.ebuild,
  lettuce-0.1.14.ebuild:
  Keyworded x86.

  15 Oct 2010; James Rowe <jnrowe@gmail.com> lettuce-0.1.14.ebuild:
  Keyworded amd64.

  06 Oct 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Added remote-id to metadata.

  25 Sep 2010; James Rowe <jnrowe@gmail.com> -lettuce-0.1.12.ebuild,