@@ -3,15 +3,17 @@ Hash: SHA1
 
 DIST lettuce-0.1.19.tar.gz 65057 RMD160 a2459cc2ce491f2961ab80af9fe8d79bf3744fcd SHA1 9f9efcc5a33204af86a78f5db1f1d78e1e87673f SHA256 1d8f28987ce5cd9299c6a74a28651f14bec0bb4fbe4d50e1e54a3c9fcf7418a7
 DIST lettuce-0.1.20.tar.gz 66467 RMD160 eb936e6dfe6cee54616fe7ef1480af1a682d3de1 SHA1 1fdf0c62e510a59efa6cd3b1f0d388527e2a2c5a SHA256 8b55a6eb2dd82a8836b666801ff3bb7630ed818b991140899342e4a0a01abcab
+DIST lettuce-0.1.21.tar.gz 66536 RMD160 e2daab9cc2988bd56c13094493a159700be520fa SHA1 9fc47b96bb91a537ba0a5dcd94e88d34a6b2b955 SHA256 1c9041e3b20e838dacd30b85b68e0d19167388a6d7cac35054cf76d4ffc01d9c
 EBUILD lettuce-0.1.19.ebuild 527 RMD160 6b2642a38bbc5ad86f92f053bbda9e0d4dccfd45 SHA1 5bada943e37eb1b1a2bd97e9168738ec61d22225 SHA256 bb893e25d25a06d77b3502b08ed47a79b918ca16c910a8edb5659829c6727842
 EBUILD lettuce-0.1.20.ebuild 527 RMD160 2e8d390a94bef2f622567ddc611ac6e9dd158b42 SHA1 88448bb875d2e6d04d0e831d27a60ac5a5bc2551 SHA256 d02fb78b55246fa08426c8acae32344b29e1e69d342bfbf2a4aa814430446368
-MISC ChangeLog 5166 RMD160 3dd503aec392498af74c927fa619075029518e0f SHA1 a527bfb35c985f513a2a69a876221777304b3902 SHA256 f5e72f633e6f66564c3b4c4c69d86291ef9b21ba4e15d72b7f4a9a7ced0040d4
+EBUILD lettuce-0.1.21.ebuild 527 RMD160 2e8d390a94bef2f622567ddc611ac6e9dd158b42 SHA1 88448bb875d2e6d04d0e831d27a60ac5a5bc2551 SHA256 d02fb78b55246fa08426c8acae32344b29e1e69d342bfbf2a4aa814430446368
+MISC ChangeLog 5289 RMD160 62650db79db1fddc0a8b5825d7a68e9b4d400c4b SHA1 12065f0797f8e1a32da208e66260f462efd2bb87 SHA256 4de411f0eda7bd05002df9c433abc6fd7d5f8cf8503541a5a0847ecb5a0ac6e6
 MISC metadata.xml 543 RMD160 ba3769e47c6fd85b04b312ae9e19f0b7df54d047 SHA1 9348d7b60519187a8c2634ed087236ae176d3c9b SHA256 ea4a59405434a4b345393c1bc788273477110612782560fa496f8e92c5357db3
 MISC watch 71 RMD160 edd7da79f12dfdb2aefdeef0ad84169198ac81e1 SHA1 179d11f0283700ba50fec038510e6799bf4cda97 SHA256 38b70a11ff644c207b17b11d885bbafb7166e1b9bcc238b58a630f54c8cd0b4c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk1iU4YACgkQzJrj3cAXR0mv1wCgiwT55emOmjD+Cj6NgtNQnrXY
-N54AmwWbS/CUIwjOPkT49e1g6/Uj2Rjx
-=+F3m
+iEYEARECAAYFAk1tMEEACgkQzJrj3cAXR0lbVACfVMZyJieTk2xyEZTU97tjPzxS
+z54An3lqE+KwZ512kaKFc+NwxcRHkbGd
+=sHyv
 -----END PGP SIGNATURE-----
