@@ -1,0 +1,22 @@
+dev-python/setuptools >=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* =dev-lang/python-2.5* )
+dev-python/setuptools >=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* =dev-lang/python-2.5* )
+0
+mirror://pypi/l/lettuce/lettuce-0.1.21.tar.gz
+
+http://lettuce.it/
+MIT
+Cucumber-ish BDD for python
+~amd64 ~x86
+distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
+
+
+
+
+3
+
+compile install postinst postrm prepare unpack
+
+
+
+
+
