@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*lettuce-0.1.21 (01 Mar 2011)
+
+  01 Mar 2011; James Rowe <jnrowe@gmail.com> +lettuce-0.1.21.ebuild:
+  Version bump [298].
+
   21 Feb 2011; James Rowe <jnrowe@gmail.com> -lettuce-0.1.18.ebuild,
   lettuce-0.1.19.ebuild:
   Keyworded x86.
